# Devico-Handheld-SDK

./: CMakeLists.txt  README.md
include/: game_api.h
sdk/: CMakeLists.txt
sdk/include/: game_api.h  sdk.h  system_api.h
sdk/src/: sdk.c
src/: test_game.c
